[gd_scene format=3 uid="uid://1wdfexp0tc70"]

[ext_resource type="Texture2D" uid="uid://d0sjv8slse3xi" path="res://Art/exclamation.png" id="1"]
[ext_resource type="Script" uid="uid://ckq68x26nfinw" path="res://Scenes/BulleDessin.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://bgfg81nthy3cd" path="res://Art/ov_vide.png" id="4"]
[ext_resource type="Script" uid="uid://dmrx4ge43siee" path="res://Scenes/Amoureux.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://bnxbo77iv4bii" path="res://Art/coeur.png" id="5_jwlck"]
[ext_resource type="Script" uid="uid://b1rgx84n4fejh" path="res://Scenes/PrendreTresor.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://bw5jvxvcg8e07" path="res://Son/bulle.wav" id="8"]
[ext_resource type="Texture2D" uid="uid://cqmb1yjs5y1tx" path="res://Art/am3.png" id="9"]
[ext_resource type="Texture2D" uid="uid://bxr6n1jyfx5l4" path="res://Art/am2.png" id="10"]

[sub_resource type="CircleShape2D" id="1"]
radius = 180.0

[sub_resource type="CircleShape2D" id="2"]
radius = 50.0

[sub_resource type="CircleShape2D" id="3"]
radius = 150.0

[sub_resource type="SpriteFrames" id="4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="Amoureux" type="Node2D" unique_id=1424298211]
script = ExtResource("5")

[node name="Exclamation" type="Area2D" parent="." unique_id=240492496]
collision_mask = 2
monitorable = false

[node name="CollisionLarge" type="CollisionShape2D" parent="Exclamation" unique_id=1562385389]
shape = SubResource("1")

[node name="ExclamationPoint" type="Sprite2D" parent="Exclamation" unique_id=303455727]
unique_name_in_owner = true
scale = Vector2(0.2, 0.2)
texture = ExtResource("1")

[node name="Bulle" type="Area2D" parent="." unique_id=1610506994]
collision_mask = 2
monitorable = false

[node name="CollisionPrecise" type="CollisionShape2D" parent="Bulle" unique_id=109152878]
shape = SubResource("2")

[node name="BulleDessin" type="Sprite2D" parent="Bulle" unique_id=2112968680]
position = Vector2(0, -50)
scale = Vector2(0.2, 0.2)
texture = ExtResource("4")
script = ExtResource("3")

[node name="ImgTresor" type="Sprite2D" parent="Bulle/BulleDessin" unique_id=125997923]
texture = ExtResource("5_jwlck")

[node name="PrendreTresor" type="Area2D" parent="Bulle/BulleDessin" unique_id=1121782524]
collision_mask = 2
monitorable = false
script = ExtResource("7")

[node name="CollisionPrendre" type="CollisionShape2D" parent="Bulle/BulleDessin/PrendreTresor" unique_id=1372444363]
shape = SubResource("3")

[node name="SonBulle" type="AudioStreamPlayer2D" parent="." unique_id=2121001812]
stream = ExtResource("8")
max_distance = 5000.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1281827858]
position = Vector2(4, 35)
sprite_frames = SubResource("4")

[connection signal="body_entered" from="Exclamation" to="." method="_on_exclamation_body_entered"]
[connection signal="body_entered" from="Bulle" to="Bulle/BulleDessin" method="_on_Bulle_body_entered"]
[connection signal="body_entered" from="Bulle" to="Bulle/BulleDessin/PrendreTresor" method="_on_Bulle_body_entered"]
[connection signal="body_exited" from="Bulle" to="Bulle/BulleDessin" method="_on_Bulle_body_exited"]
[connection signal="body_exited" from="Bulle" to="Bulle/BulleDessin/PrendreTresor" method="_on_Bulle_body_exited"]
[connection signal="body_entered" from="Bulle/BulleDessin/PrendreTresor" to="." method="_on_PrendreTresor_body_entered"]
